--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,17 +5,39 @@
 }
 
 body {
+    height: 100vh;
     background-color: rgb(45, 4, 83);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: fit-content;
+    text-align: center;
 }
 
 h1 {
-    color: #ffe600; 
+    color: #ffe600;
 }
 
 .game-container {
     color: #ffe600;
+    display: block;
+    text-align: center;
+}
+
+.game-container div, .answer-box {
+    display: block;
 }
 
 footer {
+    position: absolute;
+    bottom: 0;
     color: #ffe600;
+    text-align: center;
 }
