--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,9 +30,28 @@ h1 {
 .hide {
     display: none;
 }
+.start-game {
+    color: #2d0453;
+    background-color: #ffe600;
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 150px;
+    height: 150px;
+    border-radius: 1.5rem;
+    text-align: center;
+    
+}
+
+.start-game h2 {
+    font-size: large;
+    color: #2d0453;
+}
 
 .start-button {
-    position: absolute;
     width: 120px;
     height: 50px;
 
@@ -41,6 +60,8 @@ h1 {
 .game-container {
     color: #2d0453;
     background-color: #ffe600;
+    position: absolute;
+    z-index: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
