--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,8 +49,8 @@ header div {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 1.5rem;
     text-align: center;
     
@@ -76,8 +76,8 @@ header div {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     border-radius: 1.5rem;
     text-align: center;
 }
@@ -106,6 +106,21 @@ header div {
 .incorrect {
     color: red;
     text-decoration: underline;
+}
+
+.end-game-container {
+    color: #2d0453;
+    background-color: #ffe600;
+    position: absolute;
+    z-index: -1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 250px;
+    height: 250px;
+    border-radius: 1.5rem;
+    text-align: center;
 }
 
 footer {
