--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+/* general styling */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -18,32 +19,57 @@ body {
     font-family: 'Chakra Petch', sans-serif;
 }
 
+.hide {
+    display: none;
+}
+
+/* header styling */
 header {
     position: absolute;
+    display: flex;
+    flex-direction: column;
     top: 0;
     width: 100%;
     padding: 20px;
     height: fit-content;
-    text-align: center;
+    align-items: center;
 }
 
 h1 {
     color: #FFFBDD;
     display: block;
-    margin-left: 20px;
     font-size: 1.5rem;    
 }
 
-header div {
+.collapsible {
+    background-color: #00369b;
     color: #FFFBDD;
+    font-family: 'Chakra Petch', sans-serif;
+    cursor: pointer;
+    padding: 20px;
+    width: fit-content;
+    border: none;
+    text-align: center;
+    outline: none;
     font-size: large;
-    display: block;
-    padding-top: 20px;
 }
 
-.hide {
+.active, .collapsible:hover {
+    color: #62fa62;
+  }
+
+  .collapsible-content {
+    padding: 10px;
     display: none;
-}
+    overflow: hidden;
+    color: #00369b;
+    background-color: #FFFBDD;
+    border-radius: .3rem;
+    text-align: center;
+    z-index: 3;
+  }
+
+/* start game div styling */
 .start-game {
     color: #00369b;
     background-color: #FFFBDD;
@@ -54,14 +80,14 @@ header div {
     justify-content: space-evenly;
     align-items: center;
     width: 200px;
-    height: 300px;
+    height: 400px;
     border-radius: 1.5rem;
     text-align: center;
     
 }
 
 .start-game h2 {
-    font-size: large;
+    font-size: x-large;
     color: #00369b;
 }
 
@@ -79,12 +105,14 @@ header div {
 
 .button:hover {
     background-color: #62fa62;
+    cursor: pointer;
 }
 
 .button:focus {
     background-color: #62fa62;
 }
 
+/* game play div styling */
 .game-container {
     color: #00369b;
     background-color: #FFFBDD;
@@ -95,7 +123,7 @@ header div {
     justify-content: center;
     align-items: center;
     width: 200px;
-    height: 300px;
+    height: 400px;
     border-radius: 1.5rem;
     text-align: center;
 }
@@ -156,17 +184,16 @@ header div {
     text-decoration: underline;
 }
 
+/* end game div styling */
 .end-game-container {
     color: #00369b;
     background-color: #FFFBDD;
-    position: absolute;
     z-index: -1;
     display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     width: 250px;
-    height: 300px;
+    height: 400px;
     border-radius: 1.5rem;
     text-align: center;
 }
@@ -193,6 +220,16 @@ header div {
     text-align: center;
 }
 
+.form-box:focus {
+    border-color: #d1b900;
+}
+
+.form-box:hover {
+    border-color: #d1b900;
+    cursor: pointer;
+}
+
+/* footer styling */
 footer {
     position: absolute;
     bottom: 0;
