--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -58,12 +58,17 @@ h1 {
     color: #62fa62;
   }
 
+  .collapsible:focus {
+    color: #62fa62;
+  }
+
   .collapsible-content {
-    padding: 10px;
+    padding: 20px;
     display: none;
     overflow: hidden;
     color: #00369b;
     background-color: #FFFBDD;
+    border: 2px solid #021e51;
     border-radius: .3rem;
     text-align: center;
     z-index: 3;
@@ -74,9 +79,9 @@ h1 {
     color: #00369b;
     background-color: #FFFBDD;
     position: absolute;
-    z-index: 1;
     display: flex;
     flex-direction: column;
+    z-index: 1;
     justify-content: space-evenly;
     align-items: center;
     width: 200px;
@@ -117,7 +122,6 @@ h1 {
     color: #00369b;
     background-color: #FFFBDD;
     position: absolute;
-    z-index: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -188,7 +192,6 @@ h1 {
 .end-game-container {
     color: #00369b;
     background-color: #FFFBDD;
-    z-index: -1;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
