--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,8 @@
 
 body {
     height: 100vh;
-    background-color:#00369B;
-    background-position: bottom; 
+    background-color: #00369B;
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: auto;
     position: relative;
@@ -38,7 +38,7 @@ header {
 h1 {
     color: #FFFBDD;
     display: block;
-    font-size: 1.5rem;    
+    font-size: 1.5rem;
 }
 
 .collapsible {
@@ -54,15 +54,17 @@ h1 {
     font-size: large;
 }
 
-.active, .collapsible:hover {
+.active,
+.collapsible:hover {
     color: #62fa62;
-  }
+}
 
-  .collapsible:focus {
+.collapsible:focus {
     color: #62fa62;
-  }
+}
 
-  .collapsible-content {
+
+.collapsible-content {
     padding: 20px;
     display: none;
     overflow: hidden;
@@ -73,7 +75,7 @@ h1 {
     box-shadow: 5px 5px 6px 0px rgba(14, 0, 59, 0.74);
     text-align: center;
     z-index: 3;
-  }
+}
 
 /* start game div styling */
 .start-game {
@@ -89,7 +91,7 @@ h1 {
     height: 400px;
     border-radius: 1.5rem;
     text-align: center;
-    
+
 }
 
 .start-game h2 {
