--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,10 @@ body {
     display: none;
 }
 
+.show {
+    display: flex;
+}
+
 /* header styling */
 header {
     position: absolute;
@@ -82,13 +86,14 @@ h1 {
     color: #00369b;
     background-color: #FFFBDD;
     position: absolute;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
-    z-index: 1;
+    /* z-index: 1; */
     justify-content: space-evenly;
     align-items: center;
     width: 200px;
     height: 400px;
+    margin: 10px;
     border-radius: 1.5rem;
     text-align: center;
 
@@ -125,7 +130,7 @@ h1 {
     color: #00369b;
     background-color: #FFFBDD;
     position: absolute;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -195,7 +200,7 @@ h1 {
 .end-game-container {
     color: #00369b;
     background-color: #FFFBDD;
-    display: flex;
+    /* display: flex; */
     justify-content: space-evenly;
     align-items: center;
     width: 250px;
