--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,7 @@
     margin: 0;
 }
 
+/* Mobile styles */
 body {
     height: 100vh;
     background-color: #00369B;
@@ -94,11 +95,10 @@ h1 {
     margin: 10px;
     border-radius: 1.5rem;
     text-align: center;
-
 }
 
 .start-game h2 {
-    font-size: x-large;
+    font-size: 1.4rem;
     color: #00369b;
 }
 
@@ -247,4 +247,118 @@ footer {
 
 footer p {
     padding: 20px;
+}
+
+/* small tablet styles */
+@media screen and (min-width: 768px) {
+    h1 {
+        font-size: 1.7rem;
+    }
+
+    .start-game {
+        width: 275px;
+        height: 440px;
+    }
+
+    .start-game h2 {
+        font-size: 1.6rem;
+    }
+
+    .button {
+        width: 110px;
+        height: 39px;
+        font-size: 1rem;
+    }
+
+    .game-container {
+        width: 275px;
+        height: 440px;
+    }
+
+    .end-game-container {
+        width: 275px;
+        height: 440px;
+    }
+}
+
+/* large tablet and laptop styles */
+@media screen and (min-width: 960px) {
+    h1 {
+        font-size: 1.9rem;
+    }
+
+    /* start game div styling */
+    .start-game {
+        width: 300px;
+        height: 480px;
+    }
+
+    .start-game h2 {
+        font-size: 1.8rem;
+    }
+
+    .button {
+        width: 120px;
+        height: 43px;
+        font-size: 1rem;
+    }
+
+    .game-container {
+        width: 300px;
+        height: 480px;
+    }
+
+    .end-game-container {
+        width: 300px;
+        height: 480px;
+    }
+    
+    .form-box {
+        font-size: 1.3rem;
+    }
+
+    .game-outcome {
+        font-size: 1.5rem;
+    }
+}
+
+/* desktop styles */
+@media screen and (min-width: 1200px) {
+    h1 {
+        font-size: 2.1rem;
+    }
+
+    /* start game div styling */
+    .start-game {
+        width: 350px;
+        height: 560px;
+    }
+
+    .start-game h2 {
+        font-size: 2.0rem;
+    }
+
+    .button {
+        width: 130px;
+        height: 47px;
+        font-size: 1rem;
+    }
+
+    .game-container {
+        width: 300px;
+        height: 480px;
+    }
+
+    .end-game-container {
+        width: 300px;
+        height: 480px;
+    }
+    
+    .form-box {
+        font-size: 1.3rem;
+    }
+
+    .game-outcome {
+        font-size: 1.5rem;
+    }
 }
