--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -138,6 +138,7 @@ h1 {
     width: 250px;
     height: 355px;
     border-radius: 1.5rem;
+    box-shadow: 2px 5px 16px 0px #0B325E, 10px 16px 18px 0px rgba(0,13,92,0.62);
     text-align: center;
 }
 
@@ -206,6 +207,7 @@ h1 {
     width: 250px;
     height: 355px;
     border-radius: 1.5rem;
+    box-shadow: 2px 5px 16px 0px #0B325E, 10px 16px 18px 0px rgba(0,13,92,0.62);
     text-align: center;
     z-index: 1;
 }
