--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -313,7 +313,8 @@ footer p {
     }
 
     .game-outcome {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
+        padding-top: 5px;
     }
 }
 
@@ -376,7 +377,7 @@ footer p {
     }
 
     .game-outcome {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 }
 
@@ -439,6 +440,6 @@ footer p {
     }
 
     .game-outcome {
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
 }
